tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__SeerStoneorSummo-AAAAAAAAAAAAAAAAAAAJKA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2344,
  "prerequisites": [
    2343
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Seer Stone is a variation of a Crystal Ball, that allows witches to communicate with one another over great distances. It is mostly used by one witch to summon other members of their coven either to help out in a fight, or to help perform a ritual. The seer stone may also be used on another player to reveal if they are afflicted by a curse.\n\nTo summon a coven witch for aid, use the Seer Stone while held. Holding for longer summons more coven members.\n\nIf near a Witches' Cauldron, the summoned witches will circle it ready for a ritual.\n\nTo call the entire coven to perform a rite, start the rite normally while holding the Seer Stone.\n\nTo determine if another player is cursed, to find out if they have a coven or familiar, and how much time they can manifest for, use the Seer Stone on them when they are within 3 blocks distance. Sneak-using the stone will show the same information for the bearer of the Stone.\n\nA Seer Stone is created by infusing a Quartz Sphere with Obsidian and Happenstance Oil using a Rite of Infusion.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Seer Stone or Summon the Witches",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2343
  ],
  "rewards": [],
  "tasks": []
}
