tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__SleepWell-AAAAAAAAAAAAAAAAAAAGGw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1563,
  "prerequisites": [
    1562
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Brew of Sleeping is the normal way for a Witch to enter the Spirit World.\n\nNeedless to say an unprepared witch will almost always experience a nightmare when they head to the spirit world this way.\n\nThe witch must drink the brew and then will fall into a deep sleep, leaving their body and items behind and entering the world of spirits.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sleep Well!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1562
  ],
  "rewards": [],
  "tasks": []
}
