tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__SpiritCoinTransf-AAAAAAAAAAAAAAAAAAABUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 338,
  "prerequisites": [
    1578
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Potion of Spirit can only be made in the spirit world. Wondering how you can get your stuff like the Kettle, Spinning Wheel or Cauldron to the spirit world? You can transfer a few coins to the spirit world and buy some stuff.\n\n[warn]Don't claim the coins until you've gone to the other side.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spirit Coin Transfer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1578
  ],
  "rewards": [],
  "tasks": []
}
