tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__TheEasyWaytoChan-AAAAAAAAAAAAAAAAAAAJcg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2418,
  "prerequisites": [
    2417
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you want the easy way? Understandable. The only prerequisite is an altar with at least 5,450 power. Try placing many different crops around the altar and a Dragon Egg on top to boost it. Otherwise, the process is as simple as dropping the following items into the Witch's Cauldron §b[warn]IN ORDER[/warn]§r.\n\n  1. Netherwart (+2 Capacity)\n  2. Tear of the Goddess (+2 Capacity)\n  3. Diamond Vapor (+2 Capacity)\n  4. Diamond (+2 Capacity)\n\n§7  5. Optional, Glowstone Dust (+1 Radius)\n  6. Optional, Blaze Rod (+1 Radius)\n  7. Optional, Charged Attuned Stone (+1 Radius)§r\n\n  8. Book of Biomes Page (Chooses Biome)\n  9. Gunpowder (Add Splash Effect)\n  10. Collect with Glass Bottle (Requires 5,450 Altar Power)\n\nThe maximum radius is 4 blocks, if all three optional ingredients are included. You may get more than one brew if you are wearing your robes/hat, or have a ton of witchery brewing expertise.\n\nYou can optionally substitute in a §5Nether Star§r for §5+4 Capacity§r in place of the Tear of the Goddess and the Diamond Vapor if you have the extra resources and want to skip the distillery-produced items.\n\n[note]For more detailed info, check out the Witches' Brews book. Click on Brewing, then go to the Brews: Step-by-step page. That should tell you what you need to know. To learn what each of the brews do, see the Effects page.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Easy Way to Change Biomes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2417
  ],
  "rewards": [],
  "tasks": []
}
