tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__TheSpiritWorldDr-AAAAAAAAAAAAAAAAAAAGKA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1576,
  "prerequisites": [
    1572
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Placing your Dream Weaver of Nightmares close to where you sleep and entering the Dream World again, you have a 50% chance now that it be will be Daylight. Try a few times if necessary.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Spirit World - Dream",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1572
  ],
  "rewards": [],
  "tasks": []
}
