tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__TheSpiritWorldNi-AAAAAAAAAAAAAAAAAAAGHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1564,
  "prerequisites": [
    1563
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The spirit world is an alternate reality that mirrors the Overworld in topography. When people dream they often end up in the spirit world without realizing it (often appearing as one of its many denizens). Powerful witches can create Brews of Sleeping that allow them to pass their still awake consciousness into the Spirit World, leaving their bodies and gear behind.\n\nThe Spirit World is the only source of Wispy Cotton, Disturbed Cotton, and Mellifluous Hunger - the materials needed to make Dream Weavers. Also Brews of Flowing Spirit can only be made in the Spirit World.\n\nVery few things can pass into, or return from the Spirit World - keep this in mind when heading there (Icy Needle always stay in the inventory). Wispy Cotton, Disturbed Cotton, Mellifluous Hunger and Brews of Flowing Spirit can pass from the Spirit World to the Real World but not the other way.\n\nTwo important things to note: Circle magic does not function in the Spirit World; and Endermen cannot enter the Spirit World.\n\n[note]If you got the Dream version instead of nightmare, collect at least 16 Wispy Cotton for later.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Spirit World - Nightmare",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1563
  ],
  "rewards": [],
  "tasks": []
}
