tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__TheWitchisBack-AAAAAAAAAAAAAAAAAAAGcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1648,
  "prerequisites": [
    1645,
    1646,
    1647
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...and you're going to be in trouble.\n\nDress for success in your new Witches Hat and Robes. A girl has to look her best, so I'll give you a nice bag as reward.\n\nCheck NEI uses for impregnated leather for other accessories to your outfit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Witch is Back...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1645,
    1646,
    1647
  ],
  "rewards": [],
  "tasks": []
}
